# conveyor

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.tools  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  buf.gen.python.yaml  buf.gen.ts.yaml  buf.gen.web.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/workflows/: changelog-release.yml  ci.yml  codeql-analysis.yml  dco.yml  release.yml  stale.yml
benchmark/: README.md  main.go
docs/: architecture.md  cli.md  concepts.md  concurrency.md  encryption.md  events.md  expiring-jobs.md  grouping.md  high-availability.md  http-api.md  licenses.md  migrate-from-asynq.md  migrate-from-river.md  operations.md  protocol.md  rate-limiting.md  usage.md  webhook-workers.md  workflows.md
embedded/: embedded.go  embedded_test.go
encryption/: aesgcm.go  aesgcm_test.go  encryption.go  encryption_test.go
hack/: cover.sh  e2e-kind.sh  e2e-load.Dockerfile  quickstart.sh
sdk/: client.go  client_test.go  codec.go  codec_test.go  context.go  context_test.go  conveyor.go  conveyor_test.go  encryption.go  encryption_test.go  errors.go  errors_test.go  fixtures_test.go  group.go  group_test.go  mux.go  mux_test.go  options.go  options_test.go  porting_test.go  task.go  task_test.go  tracing.go  tracing_test.go  worker.go  worker_test.go
sdks/python/: README.md  pyproject.toml
sdks/python/src/conveyorq/: __init__.py  _time.py  _transport.py  client.py  codec.py  encryption.py  errors.py  mux.py  options.py  sync.py  task.py  worker.py
sdks/python/tests/: test_client.py  test_codec.py  test_concurrency.py  test_dependencies.py  test_encryption.py  test_enqueue_tx.py  test_handlers.py  test_integration.py  test_mux.py  test_worker.py
server/: config.go  config_test.go  cors.go  cors_test.go  dashboard.go  dashboard_test.go  discovery.go  discovery_test.go  drain_test.go  e2e_test.go  events_test.go  latency_test.go  metrics.go  metrics_test.go  server.go  server_test.go  telemetry.go  telemetry_test.go  tracing_e2e_test.go  webhook_e2e_test.go
(+294 files in other folders)
